--- a/Readme
+++ b/Readme
@@ -1,2 +1,2 @@
-Some common data structures and libararies implemented in C
+Some common data structures and libararies implemented in C.
 Same Problem shouldn't be solved twice！
